--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
-              --stack-name "back_end_stack_${CIRCLE_WORKFLOW_ID}" \
+              --stack-name "back-end-stack-${CIRCLE_WORKFLOW_ID}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"
               --region=us-east-1
       - run:
@@ -153,7 +153,7 @@ jobs:
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
               --tags project=udapeople \
-              --stack-name "front_end_stack_${CIRCLE_WORKFLOW_ID}" \
+              --stack-name "front-end-stack-${CIRCLE_WORKFLOW_ID}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"
               --region=us-east-1
       - run:
@@ -319,8 +319,8 @@ jobs:
           command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
-              aws cloudformation delete-stack --stack-name "back_end_stack_${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "front_end_stack_${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "back-end-stack-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "front-end-stack-${OldWorkflowID}"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
             fi
 
