--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,15 +30,20 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-            # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = 1
-            if(( $SUCCESS==1 )); 
+            if(( $MEMSTASH_TOKEN ));
             then
-              cd ~/project/backend
-              npm install
-              npm run premigrations:revert
-              npm run migrations:revert
+              export MEMSTASH_TOKEN=$(curl -H "Content-Type: text/plain" -H "token: ${MEMSTASH_TOKEN}" --request \
+                GET https://api.memstash.io/values/migration_id)
+
+              if(( $MEMSTASH_TOKEN )); 
+              then
+                cd ~/project/backend
+                npm install
+                npm run premigrations:revert
+                npm run migrations:revert
+              fi
             fi
+
       - slack/notify:
           channel: slack-notifications
           event: fail
@@ -203,10 +208,10 @@ jobs:
               exit 1
             fi
       - run:
-          name: Send migration results to
+          name: Send migration results to memstash
           command: |
-            export WORKFLOW_MIGRATION_ID=migration_${CIRCLE_WORKFLOW_ID}
-            export MEMSTASH_TOKEN=${curl --request GET https://api.memstash.io/token}
+            export WORKFLOW_MIGRATION_ID=migration_$(CIRCLE_WORKFLOW_ID)
+            export MEMSTASH_TOKEN=$(curl --request GET https://api.memstash.io/token)
             curl -H "Content-Type: text/plain" -H "token: ${MEMSTASH_TOKEN}" --request \
               PUT --data ${WORKFLOW_MIGRATION_ID} https://api.memstash.io/values/migration_id
       - revert-migrations
