--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,6 +200,7 @@ jobs:
           when: on_fail
           command: |
             apk --no-cache add curl
+      - jq/install
       - revert-migrations
 
   run-migrations:
