--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,13 +194,12 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook ansible/configure-server.yml -i inventory.txt
+            ansible-playbook .circleci/ansible/configure-server.yml -i inventory.txt
       - run:
           name: install curl for failure
           when: on_fail
           command: |
-            apk --no-cache add curl
-      - jq/install
+            apk --no-cache add curl jq
       - revert-migrations
 
   run-migrations:
