--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,6 +210,7 @@ jobs:
       - run:
           name: Run migrations
           command: |
+            cd backend
             npm run premigrations
             if npm run migrations && ! grep "has been executed successfully"; then
               exit 1
