--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,6 +194,7 @@ jobs:
       - run:
           name: Configure server
           command: |
+            pwd
             ansible-playbook .circleci/ansible/configure-server.yml -i inventory.txt
       - run:
           name: install curl for failure
