--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,10 +195,6 @@ jobs:
           name: Configure server
           command: |
             ansible-playbook .circleci/ansible/configure-server.yml -i inventory.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - /home/project/inventory.txt
       - run:
           name: install curl for failure
           when: on_fail
@@ -235,12 +231,12 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       - run:
           name: install tar utility
           command: |
             yum install -y tar gzip
-      - attach_workspace:
-          at: ~/
       - run:
           name: Get backend url
           command: |
@@ -253,10 +249,6 @@ jobs:
             npm run build
             aws s3 cp ./dist/ "s3://udapeople-${CIRCLE_WORKFLOW_ID}/
       - jq/install
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - inventory.txt
       - revert-migrations
 
   deploy-backend:
@@ -285,10 +277,6 @@ jobs:
           when: on_fail
           command: |
             apk --no-cache add curl jq
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - inventory.txt
       - revert-migrations
 
   smoke-test:
@@ -369,23 +357,23 @@ jobs:
 workflows:
   default:
     jobs:
-      # - build-frontend
-      # - build-backend
-      # - test-frontend:
-      #     requires: [build-frontend]
-      # - test-backend:
-      #     requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [master]
-      - configure-infrastructure
-        # requires: [deploy-infrastructure]
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
       - deploy-frontend:
