--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,7 +194,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook .circleci/ansible/configure-server.yml -i inventory.txt
+            ansible-playbook .circleci/ansible/configure-server.yml -i project/.circleci/ansible/inventory.txt
       - run:
           name: install curl for failure
           when: on_fail
@@ -241,7 +241,7 @@ jobs:
           name: Get backend url
           command: |
             ls ..
-            BACKEND_IP=$( tail -n 2 ~/inventory.txt )
+            BACKEND_IP=$( tail -n 2 project/.circleci/ansible/inventory.txt )
             export API_URL="http://${BACKEND_IP}:3030"
       - run:
           name: Deploy frontend objects
@@ -299,7 +299,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            BACKEND_IP=$( tail -n 1 inventory.txt )
+            BACKEND_IP=$( tail -n 1 project/.circleci/ansible/inventory.txt )
             export API_URL="http://${BACKEND_IP}:3030"
       - run:
           name: Backend smoke test.
