--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,9 +232,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install tar utility
+          name: install dependencies
           command: |
-            yum install -y tar gzip
+            yum install -y tar gzip nodejs
       - attach_workspace:
           at: ~/
       - run:
@@ -277,7 +277,7 @@ jobs:
           name: Deploy backend
           command: |
             ls ..
-            ansible-playbook .circleci/ansible/deploy-backend.yml -i ~/project/.circleci/ansible/inventory.txt
+            ansible-playbook .circleci/ansible/deploy-backend.yml -i .circleci/ansible/inventory.txt
       - run:
           name: install curl for failure
           when: on_fail
