--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,7 +235,7 @@ jobs:
           name: install dependencies
           command: |
             yum install -y tar gzip
-            yum module install nodejs
+            yum install nodejs
       - attach_workspace:
           at: ~/
       - run:
