--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,7 +237,8 @@ jobs:
             yum install -y tar gzip
             curl -sL https://rpm.nodesource.com/setup_14.x | bash -
             yum install -y nodejs
-
+      - restore_cache:
+          keys: [frontend-build]
       - attach_workspace:
           at: ~/
       - run:
