--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,8 +237,6 @@ jobs:
             yum install -y tar gzip
             curl -sL https://rpm.nodesource.com/setup_14.x | bash -
             yum install -y nodejs
-      - restore_cache:
-          keys: [frontend-build]
       - attach_workspace:
           at: ~/
       - run:
@@ -251,6 +249,8 @@ jobs:
           name: Deploy frontend objects
           command: |
             cd frontend
+            cp .env.sample .env
+            npm install
             npm run build
             aws s3 cp ./dist/ "s3://udapeople-${CIRCLE_WORKFLOW_ID}/
       - jq/install
