--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,7 +251,7 @@ jobs:
             cp .env.sample .env
             npm install
             npm run build
-            aws s3 cp ./dist/ "s3://udapeople-${CIRCLE_WORKFLOW_ID}/"
+            aws s3 cp ./dist/ s3://udapeople-${CIRCLE_WORKFLOW_ID}/
       - jq/install
       - revert-migrations
 
