--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -298,7 +298,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt install curl
+            apt-get update; apt-get install curl
       - run:
           name: Get backend url
           command: |
@@ -323,6 +323,7 @@ jobs:
             else
               return 0
             fi
+      - jq/install
       - revert-migrations
 
   cloudfront-update:
