--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -9,20 +9,15 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - ec2:
-        key_name: udacity
-        instance_type: t2.micro
-        image: ami-068663a3c619dd892
-        wait: yes
-        wait_timeout: 600
-        count: 3
-        assign_public_ip: yes
-
     - name: "install python for Ansible."
       become: yes
       apt:
         name: python3.8
         state: present
+
+    - name: Install boto
+      pip:
+        name: boto
 
     - name: "install nodejs for Ansible."
       become: yes
