--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -4,9 +4,15 @@
   apt:
     update_cache: yes
 
-- name: Install boto
-  pip:
-    name: boto
+- ec2:
+    region: us-east-1
+    key_name: udacity
+    instance_type: t2.micro
+    image: ami-068663a3c619dd892
+    wait: yes
+    wait_timeout: 600
+    count: 3
+    assign_public_ip: yes
 
 - name: Copying the Directory's contents (sub directories/files)
   become: true
