install python-pip

--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -15,6 +15,11 @@
         name: python3.8
         state: present
 
+    - name: "install python for Ansible."
+      become: yes
+      apt:
+        name: python3-pip
+
     - name: Install boto
       pip:
         name: boto
