--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -9,6 +9,16 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
+    - name: "update apt packages."
+      become: yes
+      apt:
+        update_cache: yes
+
+    - name: "upgrade."
+      become: yes
+      apt:
+        upgrade: dist
+
     - name: "install python for Ansible."
       become: yes
       apt:
