--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -40,6 +40,12 @@
         name: nodejs
         state: present
 
+    - name: "install npm for Ansible."
+      become: yes
+      apt:
+        name: npm
+        state: present
+
     - name: "install pm2 for Ansible."
       become: yes
       npm:
