--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -9,30 +9,16 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - name: "update apt packages."
-      become: yes
-      apt:
-        update_cache: yes
-
-    - name: "upgrade."
-      become: yes
-      apt:
-        upgrade: dist
+    - hosts: target.host
+      tasks:
+        - wait_for: host=remote.host port=8080 timeout=1
+        - debug: msg=ok
 
     - name: "install python for Ansible."
       become: yes
       apt:
         name: python3.8
         state: present
-
-    - name: "install python for Ansible."
-      become: yes
-      apt:
-        name: python3-pip
-
-    - name: Install boto
-      pip:
-        name: boto
 
     - name: "install nodejs for Ansible."
       become: yes
