--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -9,7 +9,11 @@
     - ansible_stdout_callback: yaml
 
   pre_tasks:
-    - wait_for: host=remote.host port=3030 timeout=600
+    - wait_for:
+      host: 0.0.0.0
+      port: 3030
+      delay: 300
+    #  host=remote.host port=3030 timeout=600
     - debug: msg=ok
 
     - name: "install python for Ansible."
