--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,7 +12,7 @@
     - wait_for:
       host: 0.0.0.0
       port: 3030
-      delay: 300
+      timeout: 300
     #  host=remote.host port=3030 timeout=600
     - debug: msg=ok
 
