--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -7,8 +7,9 @@
 - name: Copying the Directory's contents (sub directories/files)
   become: true
   copy:
+    remote_src: true
     src: ~/project/back-end/dist/
-    dest: ./
+    dest: .
     owner: apache
     group: apache
     mode: 0644
