add dist to cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
             npm install
             npm run build
       - save_cache:
-          paths: [backend/node_modules, backend/package.json]
+          paths: [backend/node_modules, backend/package.json, backend/dist]
           key: back_end-build
 
   test-frontend:
