--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [back_end-build]
+          keys: [back_end-build-<< pipeline.number >>]
       - run:
           name: Backend build
           command: |
@@ -83,7 +83,7 @@ jobs:
             npm run build
       - save_cache:
           paths: [backend/node_modules, backend/package.json, backend/dist]
-          key: back_end-build
+          key: back_end-build-<< pipeline.number >>
 
   test-frontend:
     docker:
@@ -105,7 +105,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [back_end-build]
+          keys: [back_end-build-<< pipeline.number >>]
       - run:
           name: backend tests
           command: |
@@ -131,7 +131,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [back_end-build]
+          keys: [back_end-build-<< pipeline.number >>]
       - run:
           name: Backend scan
           command: |
@@ -209,7 +209,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [back_end-build]
+          keys: [back_end-build-<< pipeline.number >>]
       - run:
           name: Run migrations
           command: |
@@ -277,7 +277,7 @@ jobs:
             apk add --update ansible # install the dependencies needed for your playbook
             apk add --update npm
       - restore_cache:
-          keys: [back_end-build]
+          keys: [back_end-build-<< pipeline.number >>]
       - run:
           name: Deploy backend
           command: |
