--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,7 +8,7 @@
   become: true
   copy:
     remote_src: true
-    src: ./backend/dist/
+    src: /home/circleci/project/backend/dist
     dest: .
     owner: apache
     group: apache
