--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,8 @@ jobs:
             ls
             pwd
       - save_cache:
-          paths: [backend/node_modules, backend/package.json, backend/dist]
+          paths:
+            [~/backend/node_modules, ~/backend/package.json, ~/backend/dist]
           key: back_end-build-<< pipeline.number >>
 
   test-frontend:
