--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,9 +81,11 @@ jobs:
             cd backend
             npm install
             npm run build
+            cp -R node_modules ~/node_modules
+            cp -R package.json ~/package.json
+            cp -R dist ~/dist
       - save_cache:
-          paths:
-            [~/backend/node_modules, ~/backend/package.json, ~/backend/dist]
+          paths: [backend/node_modules, backend/package.json, backend/dist]
           key: back_end-build-<< pipeline.number >>
 
   test-frontend:
@@ -111,6 +113,9 @@ jobs:
           name: backend tests
           command: |
             cd backend
+            cp -R ~/backend/node_modules node_modules
+            cp -R ~/backend/package.json package.json
+            cp -R ~/backend/dist dist
             npm run test
 
   scan-frontend:
@@ -137,6 +142,9 @@ jobs:
           name: Backend scan
           command: |
             cd backend
+            cp -R ~/backend/node_modules node_modules
+            cp -R ~/backend/package.json package.json
+            cp -R ~/backend/dist dist
             npm audit --audit-level=critical
 
   deploy-infrastructure:
@@ -277,13 +285,11 @@ jobs:
           command: |
             apk add --update ansible # install the dependencies needed for your playbook
             apk add --update npm
-            ls backend
       - restore_cache:
           keys: [back_end-build-<< pipeline.number >>]
       - run:
           name: Deploy backend
           command: |
-            ls backend
             ansible-playbook .circleci/ansible/deploy-backend.yml -i .circleci/ansible/inventory.txt
       - run:
           name: install curl for failure
