--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
             cp -R package.json ~/package.json
             cp -R dist ~/dist
       - save_cache:
-          paths: [backend/node_modules, backend/package.json, backend/dist]
+          paths: [~/node_modules, ~/package.json, ~/dist]
           key: back_end-build-<< pipeline.number >>
 
   test-frontend:
@@ -113,9 +113,9 @@ jobs:
           name: backend tests
           command: |
             cd backend
-            cp -R ~/backend/node_modules node_modules
-            cp -R ~/backend/package.json package.json
-            cp -R ~/backend/dist dist
+            cp -R ~/node_modules node_modules
+            cp -R ~/package.json package.json
+            cp -R ~/dist dist
             npm run test
 
   scan-frontend:
@@ -142,9 +142,9 @@ jobs:
           name: Backend scan
           command: |
             cd backend
-            cp -R ~/backend/node_modules node_modules
-            cp -R ~/backend/package.json package.json
-            cp -R ~/backend/dist dist
+            cp -R ~/node_modules node_modules
+            cp -R ~/package.json package.json
+            cp -R ~/dist dist
             npm audit --audit-level=critical
 
   deploy-infrastructure:
@@ -223,6 +223,9 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            cp -R ~/node_modules node_modules
+            cp -R ~/package.json package.json
+            cp -R ~/dist dist
             npm run premigrations
             if npm run migrations && ! grep "has been executed successfully"; then
               exit 1
