--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,11 +81,16 @@ jobs:
             cd backend
             npm install
             npm run build
-            cp -R node_modules ~/node_modules
-            cp -R package.json ~/package.json
-            cp -R dist ~/dist
+            sudo cp -R node_modules /usr/local/lib/node_modules_cache
+            sudo cp -R package.json /usr/local/lib/package.json
+            sudo cp -R dist /usr/local/lib/dist
       - save_cache:
-          paths: [~/node_modules, ~/package.json, ~/dist]
+          paths:
+            [
+              /usr/local/lib/node_modules_cache,
+              /usr/local/lib/package.json,
+              /usr/local/lib/dist,
+            ]
           key: back_end-build-<< pipeline.number >>
 
   test-frontend:
@@ -113,9 +118,9 @@ jobs:
           name: backend tests
           command: |
             cd backend
-            cp -R ~/node_modules node_modules
-            cp -R ~/package.json package.json
-            cp -R ~/dist dist
+            cp -R /usr/local/lib/node_modules_cache node_modules
+            cp -R /usr/local/lib/package.json package.json
+            cp -R /usr/local/lib/dist dist
             npm run test
 
   scan-frontend:
@@ -142,9 +147,9 @@ jobs:
           name: Backend scan
           command: |
             cd backend
-            cp -R ~/node_modules node_modules
-            cp -R ~/package.json package.json
-            cp -R ~/dist dist
+            cp -R /usr/local/lib/node_modules_cache node_modules
+            cp -R /usr/local/lib/package.json package.json
+            cp -R /usr/local/lib/dist dist
             npm audit --audit-level=critical
 
   deploy-infrastructure:
@@ -223,9 +228,9 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            cp -R ~/node_modules node_modules
-            cp -R ~/package.json package.json
-            cp -R ~/dist dist
+            cp -R /usr/local/lib/node_modules_cache node_modules
+            cp -R /usr/local/lib/package.json package.json
+            cp -R /usr/local/lib/dist dist
             npm run premigrations
             if npm run migrations && ! grep "has been executed successfully"; then
               exit 1
