--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,16 +81,11 @@ jobs:
             cd backend
             npm install
             npm run build
-            sudo cp -R node_modules ~/usr/local/lib/node_modules_cache
-            sudo cp -R package.json ~/usr/local/lib/package.json
-            sudo cp -R dist ~/usr/local/lib/dist
+            sudo cp -R node_modules /home/node_modules_cache
+            sudo cp -R package.json /home/package.json
+            sudo cp -R dist /home/dist
       - save_cache:
-          paths:
-            [
-              ~/usr/local/lib/node_modules_cache,
-              ~/usr/local/lib/package.json,
-              ~/usr/local/lib/dist,
-            ]
+          paths: [/home/node_modules_cache, /home/package.json, /home/dist]
           key: back_end-build-<< pipeline.number >>
 
   test-frontend:
@@ -118,9 +113,9 @@ jobs:
           name: backend tests
           command: |
             cd backend
-            cp -R ~/usr/local/lib/node_modules_cache node_modules
-            cp -R ~/usr/local/lib/package.json package.json
-            cp -R ~/usr/local/lib/dist dist
+            cp -R /home/node_modules_cache node_modules
+            cp -R /home/package.json package.json
+            cp -R /home/dist dist
             npm run test
 
   scan-frontend:
@@ -147,9 +142,9 @@ jobs:
           name: Backend scan
           command: |
             cd backend
-            cp -R ~/usr/local/lib/node_modules_cache node_modules
-            cp -R ~/usr/local/lib/package.json package.json
-            cp -R ~/usr/local/lib/dist dist
+            cp -R /home/node_modules_cache node_modules
+            cp -R /home/package.json package.json
+            cp -R /home/dist dist
             npm audit --audit-level=critical
 
   deploy-infrastructure:
