i hope it's not the one (cuz i'll be p***ed)

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -8,7 +8,7 @@
   become: true
   copy:
     remote_src: true
-    src: /tmp/dist
+    src: /tmp/dist/
     dest: .
     owner: apache
     group: apache
