--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,7 +320,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            if curl -s $(API_URL)
+            if curl -s $API_URL
             then
               return 1
             else
