--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,10 +316,12 @@ jobs:
           name: Get backend url
           command: |
             BACKEND_IP=$( tail -n 1 ~/project/.circleci/ansible/inventory.txt )
-            export API_URL="http://${BACKEND_IP}:3030"
+            API_URL="http://${BACKEND_IP}:3030"
+            echo $API_URL
       - run:
           name: Backend smoke test.
           command: |
+            echo $API_URL
             if curl -s $API_URL
             then
               return 1
