--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,8 +316,8 @@ jobs:
           name: Get backend url
           command: |
             BACKEND_IP=$( tail -n 1 ~/project/.circleci/ansible/inventory.txt )
-            API_URL="http://${BACKEND_IP}:3030"
-            echo 'export ${API_URL}' >> $BASH_ENV
+            echo 'export API_URL="http://${BACKEND_IP}:3030"' >> $BASH_ENV
+            source $BASH_ENV
       - run:
           name: Backend smoke test.
           command: |
