--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,7 +315,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            BACKEND_IP=$( tail -n 1 ~/project/.circleci/ansible/inventory.txt )
+            BACKEND_IP=$( tail -n 1 .circleci/ansible/inventory.txt )
             echo 'export API_URL="http://${BACKEND_IP}:3030"' >> $BASH_ENV
             source $BASH_ENV
       - run:
