--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -319,7 +319,7 @@ jobs:
             pwd
             echo $BACKEND_IP
             API_URL_STRING="http://${BACKEND_IP}:3030"
-            echo API_URL_STRING
+            echo $API_URL_STRING
             echo 'export API_URL=$API_URL_STRING' >> $BASH_ENV
             echo $API_URL
             source $BASH_ENV
