export and source

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,13 +320,13 @@ jobs:
             echo $BACKEND_IP
             API_URL_STRING="http://${BACKEND_IP}:3030"
             echo $API_URL_STRING
-            echo 'export API_URL_STRING' >> $BASH_ENV
-            source $BASH_ENV
+            echo 'export API_URL=$API_URL_STRING' >> $BASH_ENV
       - run:
           name: Backend smoke test.
           command: |
-            echo $API_URL_STRING
-            if curl -s $API_URL_STRING
+            source $BASH_ENV
+            echo $API_URL
+            if curl -s $API_URL
             then
               return 1
             else
